--- a/index.html
+++ b/index.html
@@ -487,10 +487,11 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Work Experience</h3>
-          <div class="resume-item">   <h4>Dauntless Creative Labs</h4>
+          <div class="resume-item">  
+            <h4>Dauntless Creative Labs</h4>
             
             <h5>March 2023 - Present</h5>
-            <p>Social Media Managerr</p>
+            <p>Social Media Manager</p>
             <li>Surprise, AZ 85379</li>
               <li>info@dauntlesscreativelabs.com</li>
               <li>https://dauntlesscreativelabs.com</li>
